# Engine

./: CMakeLists.txt  Engine  EngineDll.cpp  EngineDll.h  EngineDllTest.cpp  TODO.md
cmake/: FindFreeType.cmake  FindGLFW3.cmake
include/: IInput.h  Texture.h  camera2D.h  colors.h  engine.h  engineDLL.h  engine_ext_includes.h  engine_includes.h  engine_std_includes.h  entity.h  mathExtension.h  rectangle.h  renderer.h  shader.h
libs/: glfw3.lib
shaders/: fb_texture.fs  fb_texture.vs  simple.fs  simple.vs  simple_texture.fs  simple_texture.vs  text_yt.fs  text_yt.vs
src/: Texture.cpp  camera2D.cpp  engine.cpp  entity.cpp  mathExtension.cpp  rectangle.cpp  renderer.cpp  shader.cpp
test/: EngineDllTest.cpp  TextRenderingTest.cpp  TextureTest.cpp
